# GenetecSC-MCP

./: .env.example  .gitignore  CodebaseAnalysis  Correções de Bugs - 2025.11.07.md  Correções de Bugs - 2025.11.08.md  FASE_1_COMPLETA.md  FASE_2_COMPLETA.md  FASE_3_COMPLETA.md  LICENSE  README.md  api-manual.md  genetec_mcp_implementation_plan.md  pyproject.toml
src/genetec_mcp/: __init__.py  __main__.py  client.py  config.py  formatters.py  models.py  server.py
