[project]
name = "genetec-mcp"
version = "0.1.0"
description = "MCP server for Genetec Security Center Web SDK API"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "MCP Developer" }
]
license = { text = "MIT" }
dependencies = [
    "mcp>=1.1.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.3.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/genetec_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ['py310']